--- a/lesson1/tabs/en/1-1.html
+++ b/lesson1/tabs/en/1-1.html
@@ -6,9 +6,9 @@
 
     <meta charset="UTF-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <script src="./jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <script src="../jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
 
 </head>
 
@@ -48,13 +48,13 @@
         Inappropriate food choices, at different stages in our life may cause inadequacies, imbalance or an excess of nutrients which may have an adverse effect on our bodies. Food is a combination of nutrients. The proportion of nutrients present in food will vary widely.
         Food containing too much of one nutrient (e.g. fat) or too little of another (e.g. Protein) are bad for our health. Thus we should learn more about food, its nutrient content and their functions in order to make the correct food choices (a balanced diet) to enjoy a healthy and active life.
 
-        <img class="tape-u" src="./img/1-1/tape.png" alt="">
-        <img class="tape-d" src="./img/1-1/tape.png" alt="">
+        <img class="tape-u" src="../img/1-1/tape.png" alt="">
+        <img class="tape-d" src="../img/1-1/tape.png" alt="">
 
     </div>
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
 
 </body>
 </html>
