--- a/lesson1/tabs/tam/1-1.html
+++ b/lesson1/tabs/tam/1-1.html
@@ -6,9 +6,9 @@
 
     <meta charset="UTF-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <script src="./jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <script src="../jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap.min.css">
 
 </head>
 
@@ -48,13 +48,13 @@
         வாழ்வின் பல கட்டங்களில், பல தவறான உணவுத் தேர்வுகளினால், குறைபாடுகள், சமநிலையின்மை, அளவுக்கதிகமான போஷாக்கினால் பிரதிகூலமான விளைவுகள் என்பன ஏற்படலாம். உணவு என்பது பல போஷாக்குகளின் கலவையே. ஆனால், ஒவ்வொரு உணவு வகையிலும் கலந்திருக்கும் போஷாக்கின் விகிதாசாரம் வேறுபடும்.
         குறிப்பிட்ட ஒரு போஷாக்கு அதிகளவிலும் (உதாரணம்: கொழுப்பு) வேறெரு போஷாக்கு குறைவாகவும் (உதாரணம்: புரதம்) இருப்பினும் அது நமது உடலுக்குக் கேடு விளைவிக்கும். ஆதலால் உணவைப் பற்றிய கல்வியும், அதன் போஷாக்கு பற்றிய அறிவும் அதன் செயற்பாட்டினையும் அறிந்துகொண்டு சரியான உணவுப் பழக்க வழக்கங்களை நாம் பிரயோகிப்பின் சுகமான சுறுசுறுப்பான வாழ்க்கையை எதிர் கொள்ளலாம்.
 
-        <img class="tape-u" src="./img/1-1/tape.png" alt="">
-        <img class="tape-d" src="./img/1-1/tape.png" alt="">
+        <img class="tape-u" src="../img/1-1/tape.png" alt="">
+        <img class="tape-d" src="../img/1-1/tape.png" alt="">
 
     </div>
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
 
 </body>
 </html>
