--- a/lesson2/tabs/en/index2_1.html
+++ b/lesson2/tabs/en/index2_1.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./style.css">
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../style.css">
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
 <body>
 
 
@@ -31,7 +31,7 @@
         <br>
     </ul>
    </div>
-      <div class="col-md-4 col-sm-12"><img src="img/2_1.png" class="img-responsive"></div>
+      <div class="col-md-4 col-sm-12"><img src="../img/2_1.png" class="img-responsive"></div>
   </div>
 </div>
 
@@ -42,12 +42,12 @@
 		<p>Malnutrition may occur as a result of various factors. Food insecurity or low food availability is one of the main reasons from malnutrition. Inadequate child care also affects the nutritional status of children. Weaning food with poor nutritional value, due to mothers’ lack of knowledge of the nutritional needs of children, has been identified as one of the major reasons for poor nutritional status in children.Furthermore, unavailability of clean water and poor sanitation in the household and time for child care are some other reasons related to infant and child malnutrition in the community.</p>
 		<p>In addition to the prevalence of under-nutrition, many developing countries in the world today are faced with diet-related non-communicable diseases (DR-NCDs) such as diabetes, hypertension, and heart diseases. A holistic approach, comprising improvements in the social-economic environment together with dietary and behavioural modifications inculcated through nutrition education is required to control this dual burden of nutrition- related health problems existing in the community.</p>
 		
-		<img class="tape-u" src="./img/tape.png" alt="">
-        <img class="tape-d" src="./img/tape.png" alt="">	
+		<img class="tape-u" src="../img/tape.png" alt="">
+        <img class="tape-d" src="../img/tape.png" alt="">
 	</div>
 </div>	
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
