--- a/lesson2/tabs/en/index2_11.html
+++ b/lesson2/tabs/en/index2_11.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./style.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 <body>
 
 
@@ -17,7 +17,7 @@
 	<div>Iodine deficiency is the world’s single most significant cause of preventable brain damage and mental retardation. It decreases child survival and impairs growth and development. Iodine deficiency during pregnancy causes abortions, still births and congenital defects. Even mild iodine deficiency may affect intellectual development.</div>
 	<br>
 	<div>Lack of iodine in food and goitrogens are some causes for iodine deficiency. Goiter or the enlarged thyroid gland is the most visible clinical sign of iodine deficiency.</div>
-	<img src="img/2_11.png" style="margin: auto" class="img-responsive">
+	<img src="../img/2_11.png" style="margin: auto" class="img-responsive">
 
 	<div>The universal salt iodization programme was introduced and successfully implemented in the early 1990’s to control iodine deficiency in Sri Lanka. The last National IDD survey conducted in 2005 identified iodine deficiency a s a significant public health problem in only three provinces (western, central and Uva) in the island.</div>
 	<br>
@@ -27,7 +27,7 @@
 	</div>
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
