--- a/lesson2/tabs/en/index2_12.html
+++ b/lesson2/tabs/en/index2_12.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./style.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 <body>
 
 
@@ -34,14 +34,14 @@
 				<br>
 			</ul>
 		</div>
-		<div class="col-md-4 col-sm-12"><img src="img/2_12.png" alt="" class="img-responsive"></div>
+		<div class="col-md-4 col-sm-12"><img src="../img/2_12.png" alt="" class="img-responsive"></div>
 	</div>
 	<div>      Overweight and obesity are other nutrition problems on the rise even among school children. This is prevalent mainly in the urban areas of Sri Lanka. Unhealthy dietary practices and sedentary lifestyles may have been influential factors for this change.</div>
 	<br>
 	<div>Healthy eating goes hand in hand with physical activity to enjoy a lifetime of health and well- being. Creating awareness among school children would be a timely and cost effective strategy to control this rising epidemic of diet-related non-communicable diseases.</div>
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
