--- a/lesson2/tabs/en/index2_2.html
+++ b/lesson2/tabs/en/index2_2.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./style.css">
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../style.css">
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
 <body>
 
 
@@ -41,10 +41,10 @@
 			</ul>
 		</div>
 		<div class="col-md-4 col-sm-12">
-			<img src="img/2_2.png" class="img-responsive">
+			<img src="../img/2_2.png" class="img-responsive">
 		</div>
 	</div>
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
