--- a/lesson2/tabs/en/index2_3.html
+++ b/lesson2/tabs/en/index2_3.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./style.css">
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../style.css">
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
 <body>
 
 
@@ -26,20 +26,20 @@
 
 				<p>Infection and malnutrition are interrelated and one condition aggravates the other.</p>
 
-				<img class="img-responsive" src="img/2_3_1.png">
+				<img class="img-responsive" src="../img/2_3_1.png">
 
 				<p>The link between infection and malnutrition is a vicious cycle</p>
 				<p> but may be broken with proper nutrition and treatment.</p>
 				<p>Under-nutrition is a major public health issue in Sri Lanka as shown by National Nutrition Survey data from 1993-2006</p>
 
-				<img class="img-responsive" src="img/2_3_2.png">
+				<img class="img-responsive" src="../img/2_3_2.png">
 				<h3>(මුලාශ්‍ර: වෛද්‍ය පර්යේෂණ ආයතනය 2006 )</h3>
 
 		</div>
 	</div>
  </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
