--- a/lesson2/tabs/en/index2_5.html
+++ b/lesson2/tabs/en/index2_5.html
@@ -2,10 +2,10 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
+<script src="../jquery.min.js"></script>
 
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./style.css">
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 <body>
 
 
@@ -27,11 +27,11 @@
 		</ul>
 	   </div>
 		  <div style="text-align: center">
-			  <img src="img/2_5_1.png" style="width: 55%">
+			  <img src="../img/2_5_1.png" style="width: 55%">
 			  <h3>(මුලාශ්‍ර : වෛද්‍ය පර්යේෂණ ආයතනය)</h3>
 		  </div>
 
-		  <div style="text-align: center"><img src="img/2_5_2.png" style="width: 50%"></div>
+		  <div style="text-align: center"><img src="../img/2_5_2.png" style="width: 50%"></div>
 	  </div>
 
 </div>
@@ -61,7 +61,7 @@
 			</ul>
 		</div>
 		<div class="col-md-4 col-sm-12">
-			<img class="img-responsive" src="img/2_6.png" style="max-width: 500px;margin: auto">
+			<img class="img-responsive" src="../img/2_6.png" style="max-width: 500px;margin: auto">
 		</div>
 	</div>
 
@@ -73,7 +73,7 @@
 			<h1>How to correct iron deficiency anaemia</h1>
 			<p>Absorption od iron from food is influenced by multiple factors. One important factor is the form of iron. Heme Iron, found in animal sources (fish, meat, liver, poultry), is highly  available for absorption. Non- heme iron, found in vegetables sources and also in cow’s milk and eggs, is less available.</p>
 
-			<img src="img/2_7.png" class="img-responsive" style="padding: 15px; max-width: 500px;margin: auto">
+			<img src="../img/2_7.png" class="img-responsive" style="padding: 15px; max-width: 500px;margin: auto">
 
 			<p>The absorption of non-heme iron can be improved when a source of heme iron is consumed in the same meal. In addition, iron absorption- enhancing food (fish, meat, poultry and vitamin C rich food like orange, tomato etc. can also increase the absorption, some can inhibit or interfere with iron absorption (consuming tea and coffee immediately after meals)</p>
 			<p>Iron deficiency can also be corrected by:</p>
@@ -88,7 +88,7 @@
 
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
