--- a/lesson2/tabs/en/index2_8.html
+++ b/lesson2/tabs/en/index2_8.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./style.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 <body>
 
 
@@ -30,7 +30,7 @@
 		 </ul>
 	 </div>
 	 <div class="col-md-4 col-sm-12">
-		 <img src="img/2_8.png" class="img-responsive" style="margin: auto;">
+		 <img src="../img/2_8.png" class="img-responsive" style="margin: auto;">
 	 </div>
  </div>
 
@@ -51,7 +51,7 @@
 			</ul>
 		</div>
 		<div class="col-md-4 col-sm-12">
-			<img src="img/2_8_6.png" class="img-responsive" style="margin: auto;">
+			<img src="../img/2_8_6.png" class="img-responsive" style="margin: auto;">
 		</div>
 	</div>
 </div>
@@ -71,14 +71,14 @@
 		Mega dose vitamin A capsules are used to treat the deficiency.</p>
     <div class="row">
         <div class="col-md-5">
-            <img src="img/2_10.png" class="img-responsive">
+            <img src="../img/2_10.png" class="img-responsive">
 	    </div>
         <div class="col-md-5">
 			<div class="notepad">
 				<h2>Note:</h2>
 				Food should contain some oil to help absorption of vitamin A from plant materials. For example, adding coconut when preparing ‘sambols’ or ‘mallum’
-				<img class="tape-u" src="./img/tape.png" alt="">
-				<img class="tape-d" src="./img/tape.png" alt="">
+				<img class="tape-u" src="../img/tape.png" alt="">
+				<img class="tape-d" src="../img/tape.png" alt="">
 			</div>
 
 		</div>
@@ -88,7 +88,7 @@
 
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
