--- a/lesson2/tabs/tam/index2_1.html
+++ b/lesson2/tabs/tam/index2_1.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./style.css">
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../style.css">
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
 <body>
 
 
@@ -31,7 +31,7 @@
         <br>
     </ul>
    </div>
-      <div class="col-md-4 col-sm-12"><img src="img/2_1.png" class="img-responsive"></div>
+      <div class="col-md-4 col-sm-12"><img src="../img/2_1.png" class="img-responsive"></div>
   </div>
 </div>
 
@@ -42,12 +42,12 @@
 		<p>குறை போஷாக்கு பல காரணங்களால் ஏற்படும். உணவுத் தட்டிப்பாடு என்பன குறை போஷாக்கு ஏற்படுவதற்கான காரணங்களில் சிலவாகும். கவனயீனமான சிறுவர் பராமரிப்பும் சிறுவர்களில் குறை போஷாக்கு ஏற்படக் காரணமாகும். சிறு பிள்ளைகளின் சத்துணவு தேவை பற்றிய விளக்கக் கல்வி பெரும்பாலான தாய்மார்களிடையே இல்லாமை இந்நிலைக்கான காரணங்களில் ஒன்றாக சுட்டிக்காட்டப்பட்டுள்ளது. மேலும் சுத்தமான நீர் தட்டுப்பாடும்இ சுகாதாரமான முறையில் கழிவகற்றும் வசதியின்மையும்,  சிறுவர் பராமிப்பிற்கான நேரமின்மையும் தமது சமூகத்தில் குழந்தை மற்றும் சிறுவர்களின் போஷாக்கு குறைவிற்கான மற்றைய காரணங்களாக குறிப்பிடப்பட்டுள்ளது.</p>
 		<p>குறை போஷாக்கு ஒருபுறமிருக்க சில அபிவிருத்தி அடைந்து வரும் நாடுகளில் சர்க்கரை வியாதி, மன அழுத்தம்,  இதய நோய்கள் என்ற தொற்றா நோய்கள் காணப்படுகின்றன. போஷாக்கு சம்பந்தப்பட்ட இந்த இரட்டை சுமையை தீர்க்க,  ஒரு முழுமையான கட்டமைப்பு அவசியம். அந்த அமைப்பானது சமூகப் பொருளாதார சூழலை விருத்தி செய்து அத்துடன் எமது உணவு முறையிலும் வாழ்க்கை நடத்தையிலும் சில திருத்தங்களை போஷாக்கு கல்வி மூலம் அமுல்படுத்தினால் நமது சமூகத்தில் நிலவும் இந்த இரட்டை சுமையைத் தீர்க்கலாம்.</p>
 		
-		<img class="tape-u" src="./img/tape.png" alt="">
-        <img class="tape-d" src="./img/tape.png" alt="">	
+		<img class="tape-u" src="../img/tape.png" alt="">
+        <img class="tape-d" src="../img/tape.png" alt="">
 	</div>
 </div>	
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
