--- a/lesson2/tabs/tam/index2_11.html
+++ b/lesson2/tabs/tam/index2_11.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./style.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 <body>
 
 
@@ -17,7 +17,7 @@
 	<div>உலகில் மூளை சம்பந்தப்பட்ட  வியாதிகளுக்கும் மனோரீதியான பிரச்சினைகளுக்கும்  தனிப்பட்ட காரணமாக அயடின்  குறைப்பாட்டையே சுட்டிக்காட்டுவர். பிரசவ காலத்தில் அயடின் குறைபாட்டினால் மூளை வளர்ச்சி ஸ்தம்பிக்கும்.</div>
 	<br>
 	<div>உணவிலும் தைரொய்ட் சுரப்பிகளிலும் அயடின் இல்லாமை, அயடின் குறைப்பாட்டு நோய்களை ஏற்படுத்தும். அயடின் குறைப்பாட்டினால் வீக்கமடைந்த தைரொய்ட் சுரப்பிகளை அவதானிக்கலாம்.</div>
-	<img src="img/2_11.png" style="margin: auto" class="img-responsive">
+	<img src="../img/2_11.png" style="margin: auto" class="img-responsive">
 
 	<div>இலங்கையில் அயடின் தொடர்பான பிரச்சினையை கடடுப்படுத்த உப்புடன் அயடின் கலக்கும் முறை 1990 ஆம் ஆண்டுகளில் அறிமுகப்படுத்தப்பட்டு வெற்றிகரமாக அமுலுக்கு வந்தது. கடந்த 2005 ஆம் ஆண்டு தேசிய அயடின் குறைபாட்டு ஆராய்ச்சியின் போது இலங்கையின் 3 மாகாணங்களிலேயே (மேல், மத்திய, ஊவா) இக்குறையை பெருவாரியாக இருப்பதாக அறியப்பட்டது.  </div>
 	<br>
@@ -27,7 +27,7 @@
 	</div>
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
