--- a/lesson2/tabs/tam/index2_12.html
+++ b/lesson2/tabs/tam/index2_12.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./style.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 <body>
 
 
@@ -34,14 +34,14 @@
 				<br>
 			</ul>
 		</div>
-		<div class="col-md-4 col-sm-12"><img src="img/2_12.png" alt="" class="img-responsive"></div>
+		<div class="col-md-4 col-sm-12"><img src="../img/2_12.png" alt="" class="img-responsive"></div>
 	</div>
 	<div>உடல் பருமன் அதிகரிப்பு இலங்கையின் நகர்ப்புறங்களிலும், பெரும்பாலான பள்ளிச் சிறார்களிடம் காணப்படும் பிரச்சினையாகும். சுகாதாரமற்ற பழக்கங்களினாலும், சரீர உழைப்பற்ற வழக்கங்களினாலும் இவ்வகையான பிரச்சினைகள் ஏற்படலாம்.</div>
 	<br>
 	<div>சுகாதரமான உணவு முறையுடன் சேர்ந்த உடற்பயிற்சியும் தான்  ஆரோக்கியமான நல் வாழ்வுக்கு அடித்தளம். பள்ளி மாணவர்களிடையே போஷாக்கு பற்றிய விழிப்புணர்வை ஏற்படுத்துவதே உணவு சம்பந்தப்பட்ட தொற்றா வியாதிகளைக் கட்டுப்படுத்த சரியான முறை.  </div>
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
