--- a/lesson2/tabs/tam/index2_3.html
+++ b/lesson2/tabs/tam/index2_3.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./style.css">
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../style.css">
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
 <body>
 
 
@@ -26,20 +26,20 @@
 
 				<p>தொற்று நோய்களும் குறை போஷாக்கும் நேரடித் தொடர்புடையவை. ஒன்றின் நிலை மற்றதைத் தாக்கும்</p>
 
-				<img class="img-responsive" src="img/2_3_1.png">
+				<img class="img-responsive" src="../img/2_3_1.png">
 
 				<p>தொற்று நோய்களுக்கும் குறை போஷாக்கிற்கும் இடையிலான தொடர்பு ஒரு கொடிய வட்டத்தைப் போன்றது.</p>
 				<p> ஆயினும் சரியான சத்துணவு முறையாலும் உரிய சிகிச்சையாலும் அந்த வட்டத்தை உடைக்கலாம்.</p>
 				<p>கீழ் காட்டப்பட்ட 1993-2006 வருடத்திற்கான தேசிய போஷாக்கு ஆராய்ச்சி வெளியிட்ட தகவலின் படி இலங்கையில் குறை போஷாக்கானது பெரும் சமூகப் பிரச்சினையாகக் கருதப்படுகிறது.</p>
 
-				<img class="img-responsive" src="img/2_3_2.png">
+				<img class="img-responsive" src="../img/2_3_2.png">
 				<h3>(මුලාශ්‍ර: වෛද්‍ය පර්යේෂණ ආයතනය 2006 )</h3>
 
 		</div>
 	</div>
  </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
