--- a/lesson2/tabs/tam/index2_5.html
+++ b/lesson2/tabs/tam/index2_5.html
@@ -2,10 +2,10 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
+<script src="../jquery.min.js"></script>
 
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./style.css">
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 <body>
 
 
@@ -27,11 +27,11 @@
 		</ul>
 	   </div>
 		  <div style="text-align: center">
-			  <img src="img/2_5_1.png" style="width: 55%">
+			  <img src="../img/2_5_1.png" style="width: 55%">
 			  <h3>(මුලාශ්‍ර : වෛද්‍ය පර්යේෂණ ආයතනය)</h3>
 		  </div>
 
-		  <div style="text-align: center"><img src="img/2_5_2.png" style="width: 50%"></div>
+		  <div style="text-align: center"><img src="../img/2_5_2.png" style="width: 50%"></div>
 	  </div>
 
 </div>
@@ -61,7 +61,7 @@
 			</ul>
 		</div>
 		<div class="col-md-4 col-sm-12">
-			<img class="img-responsive" src="img/2_6.png" style="max-width: 500px;margin: auto">
+			<img class="img-responsive" src="../img/2_6.png" style="max-width: 500px;margin: auto">
 		</div>
 	</div>
 
@@ -73,7 +73,7 @@
 			<h1>இரும்பு சக்தி குறைபாட்டை நிவர்த்தி செய்தல்</h1>
 			<p>  உணவிலுள்ள இரும்புச்சக்தி உடல் உருப்புக்களுக்குள் உறிஞ்சப்படுவது பல காரணிகளில் தங்கியுள்ளன. உணவில் காணப்படும் இரும்பின் கட்டமைப்பு இதில் முக்கிய காரணியாகும். மாமிச உணவில் (மீன், இறைச்சி, கோழி, ஈரல்) காணப்படும் ஹீம் இரும்பு அதிகளவில் உடலால் உட்கிரகிக்கப்படுகிறது. தாவர உணவு, முட்டை, பசும்பாலில் இருக்கும் ஹீம் அற்ற இரும்பு குறைந்தளவிலே உட்கிரகிக்கப்படுகின்றது. </p>
 
-			<img src="img/2_7.png" class="img-responsive" style="padding: 15px; max-width: 500px;margin: auto">
+			<img src="../img/2_7.png" class="img-responsive" style="padding: 15px; max-width: 500px;margin: auto">
 
 			<p>ஹீம் அற்ற இரும்பு உள்ள உணவுடன் ஹீம் இரும்பு உள்ள உணவைச் சேர்ப்பின் இரண்டு விதமான இரும்பும் உறிஞ்சப்படும். மேலும், இரும்பு உறிஞ்சலை கூட்டும் உணவுகளும் (மீன், இறைச்சி, கோழி, விற்றமின் C நிறைந்த ஆரஞ்சு, தக்காளி என்பன) ஹீம் அற்ற இரும்பு உட்கிரகித்தலை துரிதப்படுத்தும். சில உணவு வகைகள் இரும்பு உட்கிரகித்தலை மேம்படுத்தும் வேளை, வேறு சில உணவு வகைகள் இச்செயற்பாட்டினை தடுக்கும். (சாப்பிட்டவுடன் தேநீர், கோப்பி அருந்துதல்).</p>
 			<p>மேற்குறிப்பிடப்பட்டதுடன் பின்வருமாறும் இரும்புச் சக்தி குறைபாட்டை தீர்க்கலாம்.</p>
@@ -88,7 +88,7 @@
 
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
