--- a/lesson2/tabs/tam/index2_8.html
+++ b/lesson2/tabs/tam/index2_8.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./style.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 <body>
 
 
@@ -30,7 +30,7 @@
 		 </ul>
 	 </div>
 	 <div class="col-md-4 col-sm-12">
-		 <img src="img/2_8.png" class="img-responsive" style="margin: auto;">
+		 <img src="../img/2_8.png" class="img-responsive" style="margin: auto;">
 	 </div>
  </div>
 
@@ -51,7 +51,7 @@
 			</ul>
 		</div>
 		<div class="col-md-4 col-sm-12">
-			<img src="img/2_8_6.png" class="img-responsive" style="margin: auto;">
+			<img src="../img/2_8_6.png" class="img-responsive" style="margin: auto;">
 		</div>
 	</div>
 </div>
@@ -71,15 +71,15 @@
 		குறைபாடு செறிந்த நிலையில் இருப்பின் விற்றமின் A மாத்திரைகளை மருத்துவ வழிகாட்டலின் பேரில் எடுக்கலாம். </p>
     <div class="row">
         <div class="col-md-5">
-            <img src="img/2_10.png" class="img-responsive">
+            <img src="../img/2_10.png" class="img-responsive">
 	    </div>
         <div class="col-md-5">
 			<div class="notepad">
 				<h2>குறிப்பு</h2>
 				உணவில் எண்ணைப் பசை இருந்தால் தான் தாவர வகையிலிருந்துபெறப்படும் விட்டமின் A உடலால் உள்வாங்கப்படும். ஆதலால் சம்பல் கீரை சமைக்கையில் தேங்காய் சேர்த்தல் நல்லது
 
-				<img class="tape-u" src="./img/tape.png" alt="">
-				<img class="tape-d" src="./img/tape.png" alt="">
+				<img class="tape-u" src="../img/tape.png" alt="">
+				<img class="tape-d" src="../img/tape.png" alt="">
 			</div>
 
 		</div>
@@ -91,7 +91,7 @@
 
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
