--- a/lesson3/tabs/en/3-33.html
+++ b/lesson3/tabs/en/3-33.html
@@ -6,9 +6,9 @@
 
     <meta charset="UTF-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <script src="./jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <script src="../jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap.min.css">
 
 </head>
 
@@ -50,13 +50,13 @@
         We have discussed the importance of a balanced diet in our day-to-day life in the previous two modules. It is equally important to ensure that we understand and practice the fundamentals of personal hygiene and food safety.
         Children like you are always active and curious to explore the world by touching and inspecting everything around you. However, less attention is paid to hygiene and health care unless persistently learn the fundamentals of personal hygiene and food safety. The focus of this module is to make you vigilant about food safety and persuade you to follow correct hygienic practices when dealing with food.
 
-        <img class="tape-u" src="./img/3-33/tape.png" alt="">
-        <img class="tape-d" src="./img/3-33/tape.png" alt="">
+        <img class="tape-u" src="../img/3-33/tape.png" alt="">
+        <img class="tape-d" src="../img/3-33/tape.png" alt="">
 
     </div>
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
 
 </body>
 </html>
