--- a/lesson1/tabs/en/1-10.html
+++ b/lesson1/tabs/en/1-10.html
@@ -6,9 +6,9 @@
 
     <meta charset="UTF-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <script src="./jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <script src="../jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap.min.css">
 
 </head>
 
@@ -27,7 +27,7 @@
         <div class="layout-paragraph">
             <div class="col-md-6 col-sm-12">
                 <div class="img-div">
-                    <img class="img-responsive" src="img/1-10/1.png">
+                    <img class="img-responsive" src="../img/1-10/1.png">
                 </div>
             </div>
         </div>
@@ -40,17 +40,17 @@
             <div class="row">
                 <div class="col-md-4 col-sm-12">
                     <div class="img-div">
-                        <img class="img-responsive" src="img/1-10/2-1.png">
+                        <img class="img-responsive" src="../img/1-10/2-1.png">
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12">
                     <div class="img-div">
-                        <img class="img-responsive" src="img/1-10/2-2.png">
+                        <img class="img-responsive" src="../img/1-10/2-2.png">
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12">
                     <div class="img-div">
-                        <img class="img-responsive" src="img/1-10/2-3.png">
+                        <img class="img-responsive" src="../img/1-10/2-3.png">
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
         </div>
     </div>
 </div>
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
 
 </body>
 </html>
