--- a/lesson1/tabs/en/1-11.html
+++ b/lesson1/tabs/en/1-11.html
@@ -6,9 +6,9 @@
 
     <meta charset="UTF-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <script src="./jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <script src="../jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap.min.css">
 
 </head>
 
@@ -45,20 +45,20 @@
     <div class="row">
         <div class="col-md-6 col-sm-12">
             <div class="img-div" style="margin: 10px">
-                <img class="img-responsive" src="img/1-11/1.png">
+                <img class="img-responsive" src="../img/1-11/1.png">
             </div>
             ධාන්‍ය සහ අලවර්ග ආශ්‍රයෙන් සෑදු ආහාර (පිෂ්ඨය සහිත ආහාර කොටස් 6-11)
         </div>
         <div class="col-md-6 col-sm-12">
             <div class="img-div">
-                <img class="img-responsive" src="img/1-11/2.jpg">
+                <img class="img-responsive" src="../img/1-11/2.jpg">
             </div>
             <p style="color: #2e4596">(මුලාශ්‍ර - සෞඛ්‍ය අමාත්‍යාංශය 2012)</p>
         </div>
 
     </div>
 
-    <script src="./tabs.js"></script>
+    <script src="../tabs.js"></script>
 
 </body>
 </html>
