--- a/lesson1/tabs/en/1-7.html
+++ b/lesson1/tabs/en/1-7.html
@@ -6,9 +6,9 @@
 
     <meta charset="UTF-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <script src="./jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <script src="../jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap.min.css">
 
 </head>
 
@@ -39,7 +39,7 @@
         </div>
         <div class="col-md-4 col-sm-12">
             <div class="img-div">
-                <img class="img-responsive" src="img/1-7/2.png" width="100%">
+                <img class="img-responsive" src="../img/1-7/2.png" width="100%">
             </div>
         </div>
     </div>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-md-5 col-sm-12">
                     <div class="img-div">
-                        <img class="img-responsive" src="img/1-7/1.png" width="100%">
+                        <img class="img-responsive" src="../img/1-7/1.png" width="100%">
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="col-md-6 col-sm-12">
                     <div class="img-div">
-                        <img class="img-responsive" src="img/1-7/3.png" width="100%">
+                        <img class="img-responsive" src="../img/1-7/3.png" width="100%">
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
     </div>
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
 
 </body>
 </html>
