--- a/lesson1/tabs/tam/1-4.html
+++ b/lesson1/tabs/tam/1-4.html
@@ -6,9 +6,9 @@
 
     <meta charset="UTF-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <script src="./jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <script src="../jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap.min.css">
 
 </head>
 
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-md-6 col-sm-12">
                     <div class="img-div">
-                        <img class="img-responsive" src="img/1-4/1.png" width="100%">
+                        <img class="img-responsive" src="../img/1-4/1.png" width="100%">
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-md-6 col-sm-12">
                     <div class="img-div">
-                        <img class="img-responsive" src="img/1-4/2.png" width="100%">
+                        <img class="img-responsive" src="../img/1-4/2.png" width="100%">
                     </div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
     </div>
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
 
 </body>
 </html>
