--- a/lesson1/tabs/tam/1-6.html
+++ b/lesson1/tabs/tam/1-6.html
@@ -6,9 +6,9 @@
 
     <meta charset="UTF-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <script src="./jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <script src="../jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap.min.css">
 
 </head>
 
@@ -43,7 +43,7 @@
                         </div>
                         <div class="col-md-3 col-sm-12" style="margin-top: -80px">
                             <div class="img-div">
-                                <img class="img-responsive" src="img/1-6/1.png" width="100%">
+                                <img class="img-responsive" src="../img/1-6/1.png" width="100%">
                             </div>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
     </div>
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
 
 </body>
 </html>
