--- a/lesson2/tabs/en/index2_13.html
+++ b/lesson2/tabs/en/index2_13.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./style.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../../bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 <body>
 
 
@@ -16,11 +16,11 @@
 	 <h1>Golden rules for a healthy and balanced lifestyle</h1>
 	<div>Diet has a major role to play in both under-nutrition and diet-related non-communicable diseases (DR-NCD). A diet inadequate in quantity and quality, often due to poverty and ignorance, has been one of the immediate causes of under-nutrition. The same reason may not apply to DR-NCDs.Incorrect dietary practices and bad food habits are largely responsible for the emergence of DR-NCDs. Adherence to proper dietary guidelines and lifestyle modifications would help control the rising epidemic of DR-NCDs in the country.</div>
 
-	<img src="img/2_13.png" class="img-responsive" style="margin: auto">
+	<img src="../img/2_13.png" class="img-responsive" style="margin: auto">
 
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
