--- a/lesson2/tabs/tam/index2_14.html
+++ b/lesson2/tabs/tam/index2_14.html
@@ -2,8 +2,8 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./style.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../style.css">
 <body>
 
 
@@ -38,7 +38,7 @@
 
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
