--- a/lesson2/tabs/tam/index2_15.html
+++ b/lesson2/tabs/tam/index2_15.html
@@ -2,8 +2,8 @@
 <html>
 <meta charset="UTF-8">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<script src="./jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./style.css">
+<script src="../jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../style.css">
 <body>
 
 
@@ -25,13 +25,13 @@
 		</ul>
 
 
-		<img class="tape-u" src="./img/tape.png" alt="">
-		<img class="tape-d" src="./img/tape.png" alt="">
+		<img class="tape-u" src="../img/tape.png" alt="">
+		<img class="tape-d" src="../img/tape.png" alt="">
 	</div>
 
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
      
 </body>
 </html>
