--- a/lesson3/tabs/en/3-34.html
+++ b/lesson3/tabs/en/3-34.html
@@ -6,9 +6,9 @@
 
     <meta charset="UTF-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <script src="./jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <script src="../jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap.min.css">
 
 </head>
 
@@ -61,14 +61,14 @@
         </div>
         <div class="col-md-3 col-sm-12">
             <div class="img-div">
-                <img class="img-responsive" src="img/3-34/1.png">
+                <img class="img-responsive" src="../img/3-34/1.png">
             </div>
         </div>
 
     </div>
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
 
 </body>
 </html>
