--- a/lesson3/tabs/en/3-45.html
+++ b/lesson3/tabs/en/3-45.html
@@ -6,9 +6,9 @@
 
     <meta charset="UTF-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <script src="./jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <script src="../jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap.min.css">
 
 </head>
 
@@ -44,7 +44,7 @@
     </div>
 </div>
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
 
 </body>
 </html>
