--- a/lesson3/tabs/en/3-47.html
+++ b/lesson3/tabs/en/3-47.html
@@ -6,9 +6,9 @@
 
     <meta charset="UTF-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <script src="./jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <script src="../jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap.min.css">
 
 </head>
 
@@ -59,12 +59,12 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-12">
                         <div class="img-div">
-                            <img class="img-responsive" src="img/3-47/3.png">
+                            <img class="img-responsive" src="../img/3-47/3.png">
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="img-div">
-                            <img class="img-responsive" src="img/3-47/2.png">
+                            <img class="img-responsive" src="../img/3-47/2.png">
                         </div>
                     </div>
                 </div>
@@ -72,14 +72,14 @@
         </div>
         <div class="col-md-3 col-sm-12">
             <div class="img-div">
-                <img class="img-responsive" src="img/3-47/1.png">
+                <img class="img-responsive" src="../img/3-47/1.png">
             </div>
         </div>
     </div>
 </div>
 
 
-<script src="./tabs.js"></script>
+<script src="../tabs.js"></script>
 
 </body>
 </html>
