--- a/lesson3/tabs/tam/3-49.html
+++ b/lesson3/tabs/tam/3-49.html
@@ -8,7 +8,7 @@
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <script src="./jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap.min.css">
 
 </head>
 
@@ -38,7 +38,7 @@
         </div>
         <div class="col-md-3 col-sm-12">
             <div class="img-div">
-                <img class="img-responsive" src="img/3-49/1.png">
+                <img class="img-responsive" src="../img/3-49/1.png">
             </div>
         </div>
     </div>
@@ -65,12 +65,12 @@
         </div>
         <div class="col-md-2 col-sm-12">
             <div class="img-div">
-                <img class="img-responsive" src="img/3-49/3.png">
+                <img class="img-responsive" src="../img/3-49/3.png">
             </div>
         </div>
         <div class="col-md-2 col-sm-12">
             <div class="img-div">
-                <img class="img-responsive" src="img/3-49/2.png">
+                <img class="img-responsive" src="../img/3-49/2.png">
             </div>
         </div>
     </div>
