--- a/lesson3/tabs/tam/3-51&52.html
+++ b/lesson3/tabs/tam/3-51&52.html
@@ -8,7 +8,7 @@
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <script src="./jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap.min.css">
 
 </head>
 
